--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700|Material+Icons');
+@import '~react-md/src/scss/react-md';
+// @import 'theme.scss';
+
+@include react-md-everything;
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
