--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,6 +4,34 @@
 
 @include react-md-everything;
 
+@import '../colors.scss';
+
+.nowrap {
+  padding: 0;
+  margin: 0;
+}
+
+.nospace {
+  line-height: 0;
+}
+
+.hero-unit {
+  color: white;
+  background-color: $theme-color-2;
+  padding: 2rem;
+
+  h1 {
+    color: white;
+  }
+
+  h2 {
+    // color: $theme-color-3;
+  }
+}
+
+
+// default
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -224,7 +252,7 @@ img {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  // margin-bottom: 1.45rem;
 }
 h1 {
   margin-left: 0;
