update palette to FB group color set

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,10 +1,16 @@
 /* Color Theme Swatches in Hex */
-$theme-color-1: #028C7E;
-$theme-color-2: #63BF4A;
-$theme-color-3: #F2CC0E;
-$theme-color-4: #F27126;
-$theme-color-5: #D84929;
+//$theme-color-1: #028C7E;
+//$theme-color-2: #63BF4A;
+//$theme-color-3: #F2CC0E;
+//$theme-color-4: #F27126;
+//$theme-color-5: #D84929;
 
+
+$theme-color-1: #377C8B;
+$theme-color-2: #F3F6A5;
+$theme-color-3: #A6B828;
+$theme-color-4: #A2A644;
+$theme-color-5: #A6341B;
 
 //--------------
 
