--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -12,6 +12,8 @@ $theme-color-3: #A6B828;
 $theme-color-4: #A2A644;
 $theme-color-5: #A6341B;
 
+$theme-color-accent: #C9372A;
+
 //--------------
 
 
