--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -44,6 +44,10 @@
   padding: 2rem;
   color: $theme-color-1;
 
+  p {
+    color: inherit;
+  }
+
   .md-chip {
     display: flex;
     background: $theme-color-3;
@@ -57,6 +61,10 @@
 
   .md-avatar-content {
     background: $theme-color-1;
+  }
+
+  .md-card-text {
+    font-size: 0.7rem;
   }
 }
 
