--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -39,7 +39,6 @@
   }
 }
 
-
 .hero-secondary {
   padding: 2rem;
   color: $theme-color-1;
@@ -84,6 +83,10 @@
   }
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
 
 
 // default
